# msys2.github.io

./: .gitignore  404.html  7z_SFX_Builder_Settings.ini  7z_sfx_builder_conf.txt  7z_sfx_builder_conf_64.txt  7z_sfx_builder_msys32.txt  7z_sfx_builder_msys64.txt  CNAME  Contributing-to-MSYS2.md  Creating-Packages.md  Devtopics.md  Distributing.md  FAQ.md  GDB-qtcreator.md  History.md  Home.md  How-does-MSYS2-differ-from-Cygwin.md  LICENSE  LICENSE.README.md  LICENSE.md  Launchers.md  MSYS2-installation.md  MSYS2-introduction.md  MSYS2-re-installation.md  MSYS2-reinstallation.md  Mirrors.md  Packages.md  Porting.md  README.md  Signing-packages.md  Using-packages.md  index.html  linkcheck.sh  lychee.toml  makepkg----Creating-packages-for-msys2.md  makepkg---Creating-packages-for-msys2.md  makepkg-creating-packages-for-msys2.md  mkdocs.yml  news2rss.py  news2rss.xsl  (+5 more)
.github/workflows/: main.yml
assets/javascripts/: bundle.8fd75fb4.min.js  bundle.c18c5fb9.min.js  bundle.d7c377c4.min.js
codeofconduct/: index.html
contact/: index.html
dev/accounts/: index.html
dev/build-process/: index.html
docs/: index.md  news.md
docs/docs/: ci.md  (+5 more)
fonts/: README.md  build.sh  package-lock.json  package.json
get-involved/: index.html
license/: index.html
licenses/: BSD-3-Clause.txt
news/: index.html
overrides/: main.html
privacy/: index.html
search/: search_index.json
sponsors/: README.txt
stylesheets/: custom.css  extra.css  fonts.css  stylesheet.css
web/: SUMMARY.md  codeofconduct.md  contact.md  get-involved.md  index.md  license.md  news.md  privacy.md
(+149 files in other folders)
