[tool.poetry]
name = "msys2.org"
version = "1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.1.2"
mkdocs-material = "^9.5"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
